feat: 일정 블록 타입/제목 지원 및 모달 모바일 호환성 개선
- 일정 블록에 block_type, title 필드 추가 (V59 마이그레이션)
- 커스텀 아이콘 이미지 서비스 리팩토링
- 모달 max-height vh→dvh 전환으로 모바일 뷰포트 호환성 개선
- 체크리스트 생성 모달 UI 리팩토링
- 딥링크 설정 업데이트 및 i18n 10개 언어 번역 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>