@@ -3,8 +3,15 @@ package com.kanban.domain.customicon.service;
 import com.kanban.global.exception.BusinessException;
 import com.kanban.global.exception.ErrorCode;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.ListObjectsV2Request;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
+import software.amazon.awssdk.services.s3.model.S3Object;
 
 import javax.imageio.ImageIO;
 import java.awt.*;
@@ -23,24 +30,41 @@ import java.util.UUID;
 @Service
 public class CustomIconImageService {
 
-    @Value("${app.file.local-dir:./uploads}")
-    private String localDir;
+    private final boolean s3Enabled;
+    private final String localDir;
+    private final String bucketName;
+    private final String cloudfrontDomain;
+    private final S3Client s3Client;
 
     private static final int ICON_OUTPUT_SIZE = 256;
 
+    public CustomIconImageService(
+            @Value("${app.file.s3-enabled:false}") boolean s3Enabled,
+            @Value("${app.file.local-dir:./uploads}") String localDir,
+            @Value("${app.file.s3-bucket:}") String bucketName,
+            @Value("${app.file.cloudfront-domain:}") String cloudfrontDomain,
+            @Autowired(required = false) S3Client s3Client
+    ) {
+        this.s3Enabled = s3Enabled;
+        this.localDir = localDir;
+        this.bucketName = bucketName;
+        this.cloudfrontDomain = cloudfrontDomain;
+        this.s3Client = s3Client;
+    }
+
     /**
-     * 레퍼런스 이미지를 로컬에 저장
+     * 레퍼런스 이미지 저장
      */
     public String saveReferenceImage(byte[] imageBytes, String extension) {
         try {
             String referenceId = UUID.randomUUID().toString();
             String key = String.format("customicon/ref/%s.%s", referenceId, extension);
-            Path filePath = Paths.get(localDir, key);
-            Files.createDirectories(filePath.getParent());
-            Files.write(filePath, imageBytes);
-            log.info("Reference image saved: {}", filePath);
+            saveFile(imageBytes, key, "image/" + extension);
+            log.info("Reference image saved: {}", key);
             return referenceId;
-        } catch (IOException e) {
+        } catch (BusinessException e) {
+            throw e;
+        } catch (Exception e) {
             log.error("Failed to save reference image: {}", e.getMessage(), e);
             throw new BusinessException(ErrorCode.CUSTOMICON_IMAGE_PROCESSING_FAILED);
         }
@@ -51,16 +75,30 @@ public class CustomIconImageService {
      */
     public byte[] loadReferenceImage(String referenceId) {
         try {
-            Path refDir = Paths.get(localDir, "customicon/ref");
-            // 확장자 모름 → 패턴 매칭
-            Path found = Files.list(refDir)
-                    .filter(p -> p.getFileName().toString().startsWith(referenceId + "."))
-                    .findFirst()
-                    .orElseThrow(() -> new BusinessException(ErrorCode.CUSTOMICON_REFERENCE_NOT_FOUND));
-            return Files.readAllBytes(found);
+            String prefix = "customicon/ref/" + referenceId + ".";
+
+            if (useS3()) {
+                // S3: prefix로 목록 조회
+                var response = s3Client.listObjectsV2(ListObjectsV2Request.builder()
+                        .bucket(bucketName).prefix(prefix).maxKeys(1).build());
+                if (response.contents().isEmpty()) {
+                    throw new BusinessException(ErrorCode.CUSTOMICON_REFERENCE_NOT_FOUND);
+                }
+                String key = response.contents().get(0).key();
+                return s3Client.getObject(GetObjectRequest.builder()
+                        .bucket(bucketName).key(key).build()).readAllBytes();
+            } else {
+                // Local
+                Path refDir = Paths.get(localDir, "customicon/ref");
+                Path found = Files.list(refDir)
+                        .filter(p -> p.getFileName().toString().startsWith(referenceId + "."))
+                        .findFirst()
+                        .orElseThrow(() -> new BusinessException(ErrorCode.CUSTOMICON_REFERENCE_NOT_FOUND));
+                return Files.readAllBytes(found);
+            }
         } catch (BusinessException e) {
             throw e;
-        } catch (IOException e) {
+        } catch (Exception e) {
             log.error("Failed to load reference image: {}", e.getMessage());
             throw new BusinessException(ErrorCode.CUSTOMICON_REFERENCE_NOT_FOUND);
         }
@@ -73,12 +111,10 @@ public class CustomIconImageService {
         try {
             String jobId = UUID.randomUUID().toString();
             String resultDir = String.format("customicon/result/%s", jobId);
-            Path resultPath = Paths.get(localDir, resultDir);
-            Files.createDirectories(resultPath);
 
             // 스프라이트 시트 저장
-            Path spritePath = resultPath.resolve("sprite.png");
-            Files.write(spritePath, spriteSheetBytes);
+            String spriteKey = resultDir + "/sprite.png";
+            saveFile(spriteSheetBytes, spriteKey, "image/png");
 
             BufferedImage spriteSheet = ImageIO.read(new ByteArrayInputStream(spriteSheetBytes));
             if (spriteSheet == null) {
@@ -106,19 +142,24 @@ public class CustomIconImageService {
                     // 2차: 정규화 (바운딩 박스 → 리사이즈 → 중앙정렬)
                     BufferedImage normalized = normalizeIcon(cell, ICON_OUTPUT_SIZE);
 
+                    // PNG 바이트로 변환
+                    ByteArrayOutputStream baos = new ByteArrayOutputStream();
+                    ImageIO.write(normalized, "png", baos);
+                    byte[] iconBytes = baos.toByteArray();
+
                     // 저장
                     String iconFileName = String.format("icon_%02d.png", idx);
-                    Path iconPath = resultPath.resolve(iconFileName);
-                    ImageIO.write(normalized, "png", iconPath.toFile());
+                    String iconKey = resultDir + "/" + iconFileName;
+                    saveFile(iconBytes, iconKey, "image/png");
 
-                    String iconUrl = String.format("/uploads/%s/%s", resultDir, iconFileName);
+                    String iconUrl = buildUrl(iconKey);
                     icons.add(new IconResult(iconNames.get(idx), idx, iconUrl,
                             ICON_OUTPUT_SIZE + "x" + ICON_OUTPUT_SIZE));
                     idx++;
                 }
             }
 
-            String spriteUrl = String.format("/uploads/%s/sprite.png", resultDir);
+            String spriteUrl = buildUrl(spriteKey);
             return new CropResult(jobId, spriteUrl, icons);
 
         } catch (BusinessException e) {
@@ -129,34 +170,89 @@ public class CustomIconImageService {
         }
     }
 
+    public String getReferenceUrl(String referenceId) {
+        try {
+            String prefix = "customicon/ref/" + referenceId + ".";
+
+            if (useS3()) {
+                var response = s3Client.listObjectsV2(ListObjectsV2Request.builder()
+                        .bucket(bucketName).prefix(prefix).maxKeys(1).build());
+                if (response.contents().isEmpty()) return null;
+                return buildUrl(response.contents().get(0).key());
+            } else {
+                Path refDir = Paths.get(localDir, "customicon/ref");
+                Path found = Files.list(refDir)
+                        .filter(p -> p.getFileName().toString().startsWith(referenceId + "."))
+                        .findFirst()
+                        .orElse(null);
+                if (found == null) return null;
+                return "/uploads/customicon/ref/" + found.getFileName().toString();
+            }
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    // ─── 스토리지 추상화 ───
+
+    private boolean useS3() {
+        return s3Enabled && s3Client != null;
+    }
+
+    private void saveFile(byte[] data, String key, String contentType) {
+        try {
+            if (useS3()) {
+                s3Client.putObject(
+                        PutObjectRequest.builder()
+                                .bucket(bucketName)
+                                .key(key)
+                                .contentType(contentType)
+                                .contentLength((long) data.length)
+                                .build(),
+                        RequestBody.fromBytes(data)
+                );
+            } else {
+                Path filePath = Paths.get(localDir, key);
+                Files.createDirectories(filePath.getParent());
+                Files.write(filePath, data);
+            }
+        } catch (IOException e) {
+            log.error("Failed to save file: {}", key, e);
+            throw new BusinessException(ErrorCode.CUSTOMICON_IMAGE_PROCESSING_FAILED);
+        }
+    }
+
+    private String buildUrl(String key) {
+        if (useS3() && cloudfrontDomain != null && !cloudfrontDomain.isEmpty()) {
+            return String.format("https://%s/%s", cloudfrontDomain, key);
+        }
+        return "/uploads/" + key;
+    }
+
+    // ─── 이미지 처리 ───
+
     /**
      * 아이콘 정규화: 콘텐츠 바운딩 박스 → 70% 리사이즈 → 중앙 배치
      */
     private BufferedImage normalizeIcon(BufferedImage cell, int outputSize) {
-        // 콘텐츠 바운딩 박스 계산
         int[] bbox = findContentBounds(cell);
         int bx = bbox[0], by = bbox[1], bw = bbox[2], bh = bbox[3];
 
         if (bw <= 0 || bh <= 0) {
-            // 빈 아이콘 → 그대로 리사이즈
             return resizeImage(cell, outputSize, outputSize);
         }
 
-        // 콘텐츠 추출
         BufferedImage content = cell.getSubimage(bx, by, bw, bh);
 
-        // 목표 크기: 출력 캔버스의 70%
         double targetRatio = 0.70;
         int targetMaxDim = (int) (outputSize * targetRatio);
 
-        // 종횡비 유지 리사이즈
         double scale = Math.min((double) targetMaxDim / bw, (double) targetMaxDim / bh);
         int newW = Math.max(1, (int) (bw * scale));
         int newH = Math.max(1, (int) (bh * scale));
 
         BufferedImage resized = resizeImage(content, newW, newH);
 
-        // 투명 캔버스에 중앙 배치
         BufferedImage output = new BufferedImage(outputSize, outputSize, BufferedImage.TYPE_INT_ARGB);
         Graphics2D g = output.createGraphics();
         g.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BICUBIC);
@@ -170,9 +266,6 @@ public class CustomIconImageService {
         return output;
     }
 
-    /**
-     * 비투명 픽셀의 바운딩 박스 계산
-     */
     private int[] findContentBounds(BufferedImage img) {
         int w = img.getWidth();
         int h = img.getHeight();
@@ -182,7 +275,6 @@ public class CustomIconImageService {
             for (int x = 0; x < w; x++) {
                 int argb = img.getRGB(x, y);
                 int alpha = (argb >> 24) & 0xFF;
-                // 흰색도 배경으로 취급 (alpha 낮거나 거의 흰색)
                 if (alpha > 20 && !isNearWhite(argb)) {
                     minX = Math.min(minX, x);
                     minY = Math.min(minY, y);
@@ -220,21 +312,7 @@ public class CustomIconImageService {
             String[] parts = layout.toLowerCase().split("x");
             return new int[]{Integer.parseInt(parts[0]), Integer.parseInt(parts[1])};
         } catch (Exception e) {
-            return new int[]{4, 4}; // 기본값
-        }
-    }
-
-    public String getReferenceUrl(String referenceId) {
-        try {
-            Path refDir = Paths.get(localDir, "customicon/ref");
-            Path found = Files.list(refDir)
-                    .filter(p -> p.getFileName().toString().startsWith(referenceId + "."))
-                    .findFirst()
-                    .orElse(null);
-            if (found == null) return null;
-            return "/uploads/customicon/ref/" + found.getFileName().toString();
-        } catch (IOException e) {
-            return null;
+            return new int[]{4, 4};
         }
     }
 
